--- a/timer-hs.cabal
+++ b/timer-hs.cabal
@@ -17,6 +17,7 @@ library
   hs-source-dirs:      src
   exposed-modules:     Usage
                      , Config
+                     , Config.Internal
                      , View
                      , Command
                      , Controler
@@ -38,9 +39,12 @@ test-suite timer-hs-test
   main-is:             Spec.hs
   build-depends:       base
                      , timer-hs
+                     , hspec
+                     , QuickCheck
+  other-modules:       ConfigSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/timer-hs
+  location: https://github.com/thibran/timer-rs
