--- a/timer-hs.cabal
+++ b/timer-hs.cabal
@@ -1,7 +1,7 @@
 name:                timer-hs
-version:             0.0.1
+version:             0.0.2
 -- synopsis:
--- description:
+description:         a Haskell learning project
 homepage:            https://github.com/githubuser/timer-hs#readme
 license:             BSD3
 license-file:        LICENSE
@@ -23,6 +23,7 @@ library
                      , Controler
   build-depends:       base >= 4.7 && < 5
                      , process
+  other-modules:       Paths_timer_hs
   default-language:    Haskell2010
 
 executable timer-hs
