--- a/timer-hs.cabal
+++ b/timer-hs.cabal
@@ -44,6 +44,7 @@ test-suite timer-hs-test
                      , hspec
                      , QuickCheck
   other-modules:       ConfigSpec
+                     , ControlerSpec
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
