--- a/timer-hs.cabal
+++ b/timer-hs.cabal
@@ -24,6 +24,7 @@ library
                      , Controler.Internal
   build-depends:       base >= 4.7 && < 5
                      , process
+                     , mtl
   other-modules:       Paths_timer_hs
   default-language:    Haskell2010
 
@@ -33,6 +34,7 @@ executable timer-hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , timer-hs
+                     , mtl
   default-language:    Haskell2010
 
 test-suite timer-hs-test
@@ -41,6 +43,7 @@ test-suite timer-hs-test
   main-is:             Spec.hs
   build-depends:       base
                      , timer-hs
+                     , mtl
                      , hspec
                      , QuickCheck
   other-modules:       ConfigSpec
